// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders correctly, isLandscape false 1`] = `
<ErrorBoundary>
  <Component
    isLandscape={false}
  />
</ErrorBoundary>
`;

exports[`render renders correctly, isLandscape true 1`] = `
<ErrorBoundary>
  <Component
    isLandscape={true}
  />
</ErrorBoundary>
`;
